package com.messages;

/**
 * @author Dominic
 * @since 03-Sep-16
 * Website: www.dominicheal.com
 * Github: www.github.com/DomHeal
 */
public enum MessageType {
    DISCONNECTED, CONNECTED, STATUS, USER, SERVER, NOTIFICATION, VOICE, CHANNEL, OPENP2P, CLOSEP2P, PICTURE
}
